--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "firebase": "^10.9.0",
+    "firebase": "^10.10.0",
+    "firebase-admin": "^12.0.0",
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18"
